--- a/buckchat/package.json
+++ b/buckchat/package.json
@@ -12,6 +12,7 @@
     "@onehilltech/blueprint": "^1.0.0",
     "@onehilltech/blueprint-mongodb": "^0.7.1",
     "chai": "^3.5.0",
+    "cookie-session": "^2.0.0-alpha.1",
     "mocha": "^3.1.2",
     "superagent": "^2.3.0",
     "supertest": "^2.0.1"
