--- a/buckchat/package.json
+++ b/buckchat/package.json
@@ -14,6 +14,7 @@
     "chai": "^3.5.0",
     "cookie-session": "^2.0.0-alpha.1",
     "mocha": "^3.1.2",
+    "passport-local": "^1.0.0",
     "superagent": "^2.3.0",
     "supertest": "^2.0.1"
   },
