Added coveralls support

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,9 @@ install:
   - npm install -g istanbul
   - cd buckchat
   - npm install
+
+script:
+  - npm test --coverage
+
+after_script:
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
