--- a/buckchat/package.json
+++ b/buckchat/package.json
@@ -16,7 +16,8 @@
     "mocha": "^3.1.2",
     "passport-local": "^1.0.0",
     "superagent": "^2.3.0",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "supertest-session": "^2.0.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.14",
